--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="application.css">
    
-    <title>Document</title>
+    <title>Mr.Coffee</title>
 </head>
 <body>
     <div class="topnav">
